New tools and fixes/improvements

--- a/etc/ictools.conf
+++ b/etc/ictools.conf
@@ -29,6 +29,10 @@ solrKey="stop"
 # Kubernetes
 kubectl="/usr/local/bin/kubectl"
 
+# DB2
+db2InstallDir="/opt/IBM/db2"
+db2InstanceUser="db2inst1"
+
 # Other
 separator="================================================================================"
 # Some services require a short delay during start/stop operations
