Work on K8s tools with small other fixes

--- a/etc/ictools.conf
+++ b/etc/ictools.conf
@@ -26,8 +26,9 @@ solrInstallDir="/opt/IBM/solr/solr-4.7.2"
 solrPort=8985
 solrKey="stop"
 
-# Kubernetes
+# Pink components
 kubectl="/usr/local/bin/kubectl"
+dockerContainerDir="/var/lib/docker/containers"
 
 # DB2
 db2InstallDir="/opt/IBM/db2"
