Doc updates and bug fixes

--- a/etc/ictools.conf
+++ b/etc/ictools.conf
@@ -29,6 +29,7 @@ solrKey="stop"
 # Pink components
 kubectl="/usr/local/bin/kubectl"
 dockerContainerDir="/var/lib/docker/containers"
+redisPassword="password"
 
 # DB2
 db2InstallDir="/opt/IBM/db2"
@@ -37,7 +38,7 @@ db2InstanceUser="db2inst1"
 # Other
 separator="================================================================================"
 # Some services require a short delay during start/stop operations
-serviceDelaySeconds=3
+serviceDelaySeconds=5
 left2Column="%-60.60s"
 right2Column=" %-7s\n"
 left3Column="%-20.20s"
